fixed broken css on rankings (still needs to be upgraded and needs mobile compatibility)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,7 +50,7 @@
     padding: 80px;
 }
 
-.ranking-high, .ranking-low h1 {
+.ranking-high h1, .ranking-low h1 {
     font-family: "Legacy", Helvetica, Arial, sans-serif;
     padding-bottom: 25px;
     font-style: normal;
@@ -64,12 +64,12 @@
     border-color: black;
 }
 
-.table_ranking_high, .table_ranking_low tr {
+.table_ranking_high tr, .table_ranking_low tr {
     border-top-style: solid;
     border-top-width: 1px;
 }
 
-.table_ranking_high, .table_ranking_low th {
+.table_ranking_high th, .table_ranking_low th {
     background-color: #fff0ba;
     padding: 20px 25px;
     font-size: 20px;
@@ -77,7 +77,7 @@
     border-right-width: 2px;
 }
 
-.table_ranking_high, .table_ranking_low td {
+.table_ranking_high td, .table_ranking_low td {
     background-color: #e1e9ff;
     padding: 12px 25px;
     font-size: 20px;
